feat: setup automatic migrations and production deployment
- Add drizzle migrations to git (removed from .gitignore)
- Create production deployment script for migrations
- Add postbuild hook to automatically run migrations
- Add comprehensive deployment documentation
- Update package.json with new migration commands

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,6 @@ yarn-error.log*
 next-env.d.ts
 
 # drizzle
-/drizzle
+# Keep migrations in git, but ignore local database files
+/drizzle/*.db
+/drizzle/*.sqlite
