feat: enhance group management and import functionality
- Implemented new group management features, allowing users to rename groups and set default groups.
- Added CSV import functionality with validation and error handling.
- Introduced new actions for account, transaction, and transfer management.
- Updated the database schema to support new features, including currencies and operations.
- Refactored existing components and added new UI elements for better user experience.
- Improved authentication flow and session management.
- Added scripts for database migration and CSV import.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,19 @@ next-env.d.ts
 # Keep migrations in git, but ignore local database files
 /drizzle/*.db
 /drizzle/*.sqlite
+
+# debug and test files
+**/debug-*
+**/test-*
+**/*dump*
+**/*debug*
+**/*test*
+*.csv
+*.log
+*.tmp
+
+# development scripts
+scripts/clear-*
+scripts/CLEAR_*
+scripts/debug-*
+scripts/test-*
