--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run db:push && next dev",
-    "dev:no-migrate": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,31 +12,39 @@
     "db:up": "./scripts/load-env.sh drizzle-kit up:pg",
     "db:studio": "drizzle-kit studio",
     "db:deploy": "./scripts/deploy-migrations.sh",
+    "db:clear": "docker-compose exec -T postgres psql -U postgres -d fin_trak -f /dev/stdin < scripts/clear-database.sql",
     "postbuild": "npm run db:deploy"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/pg": "^8.15.5",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.29.0",
+    "lucide-react": "^0.544.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
-    "next-auth": "^4.24.5",
-    "bcryptjs": "^2.4.3",
-    "drizzle-orm": "^0.29.0",
-    "postgres": "^3.4.3",
-    "zod": "^3.22.4",
-    "@types/bcryptjs": "^2.4.6"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.20.6",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "drizzle-kit": "^0.20.6",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
     "tsx": "^4.6.2",
-    "dotenv": "^16.3.1"
+    "typescript": "^5"
   }
 }
